--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
   "name": "better-chat",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-scripts": "3.1.2"
-  },
+  "version": "1.0.0",
+  "description": "React and Express app",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "client-install": "cd client && npm install",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "Jain Naumova",
+  "license": "MIT",
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "nodemon": "^1.14.6"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "concurrently": "^3.5.1",
+    "express": "^4.16.2",
+    "material-design-icons": "^3.0.1",
+    "moment": "^2.24.0",
+    "shortid": "^2.2.15"
   }
 }
